fix: fix the icon alignment issue for education section

--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,4 @@
-@font-face {
-  font-family: "inter";
-  src: url("./src/assets/fonts/inter.ttf");
-}
+
 
 @font-face {
   font-family: "opensans";
